create global logger with performance, usage, error and diagnostic log events

--- a/Flogging.Core/Flogging.Core.csproj
+++ b/Flogging.Core/Flogging.Core.csproj
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FlogDetail.cs" />
+    <Compile Include="Flogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
