--- a/Flogging.Core/Flogging.Core.csproj
+++ b/Flogging.Core/Flogging.Core.csproj
@@ -77,6 +77,7 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+    <Compile Include="PerfTrack.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
